--- a/index.html
+++ b/index.html
@@ -42,18 +42,58 @@
 
 		<section class="section">
 			<h2 class="section-title">Bill</h2>
-			<input type="number" />
+			<input type="number" class="bill-amout" placeholder="$0.00"/>
 
-			<h2 class="section-title">Select Tip %</h2>
-			5% 10% 15% 25% 50% Custom
+			<fieldset>
+				<h2 class="section-title">Select Tip %</h2>
+			
+				<div class="tip-input">
+					<input type="radio" value="5%" id="5%" />
+					<label for="5%">5%</label>
+				</div>
+
+				<div class="tip-input">
+					<input type="radio" value="10%" id="10%" />
+					<label for="10%">10%</label>
+				</div>
+
+				<div class="tip-input">
+					<input type="radio" value="15%" id="15%" />
+					<label for="15%">15%</label>
+				</div>
+
+				<div class="tip-input">
+					<input type="radio" value="25%" id="25%" />
+					<label for="25%">25%</label>
+				</div>
+
+				<div class="tip-input">
+					<input type="radio" value="50%" id="50%" />
+					<label for="50%">50%</label>
+				</div>
+
+				<div class="tip-input">
+					<input type="radio" value="Custom" id="Custom" />
+					<label for="Custom">Custom</label>
+				</div>
+			</fieldset>
 
 			<h2 class="section-title">Number of People</h2>
-			<input type="number" />
-			Tip Amount / person Total / person
-
-			<button type="button">Reset</button>
+			<input type="number" class="people-amount"/>
+			<div>
+				<div>Tip Amount</div>
+				<div class="person">/ person</div>
+				<div class="tip-amount amount">$0.00</div>
+			</div>
+			<div>
+				Total
+				<div class="person">/ person</div>
+				<div class="total amount">$0.00</div>
+			</div>
+			<button class="calc">Calculate</button>
+			<input type="reset" value="Reset" />
 		</section>
-		
+
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -61,5 +101,7 @@
 			>. Coded by
 			<a href="https://github.com/alaWilliams" target="_blank">Alicja</a>.
 		</div>
+
+		<script type="text/javascript" src="./script.js"></script>
 	</body>
 </html>
