--- a/index.html
+++ b/index.html
@@ -42,39 +42,39 @@
 
 		<section class="section">
 			<h2 class="section-title">Bill</h2>
-			<input type="number" class="bill-amout" placeholder="$0.00"/>
+			<input type="number" class="bill-amount" placeholder="$0.00" name="bill"/>
 
 			<fieldset>
 				<h2 class="section-title">Select Tip %</h2>
 			
-				<div class="tip-input">
-					<input type="radio" value="5%" id="5%" />
-					<label for="5%">5%</label>
+				<div class="tip-button">
+					<button type="button" id="5" class="btn" value="0.05">
+					5%</button>
 				</div>
 
-				<div class="tip-input">
-					<input type="radio" value="10%" id="10%" />
-					<label for="10%">10%</label>
+				<div class="tip-button">
+					<button type="button" id="10" class="btn">
+					10%</button>
 				</div>
 
-				<div class="tip-input">
-					<input type="radio" value="15%" id="15%" />
-					<label for="15%">15%</label>
+				<div class="tip-button">
+					<button type="button" id="15" class="btn">
+					15% </button>
 				</div>
 
-				<div class="tip-input">
-					<input type="radio" value="25%" id="25%" />
-					<label for="25%">25%</label>
+				<div class="tip-button">
+					<button type="button" id="25" class="btn">
+					25%</button>
 				</div>
 
-				<div class="tip-input">
-					<input type="radio" value="50%" id="50%" />
-					<label for="50%">50%</label>
+				<div class="tip-button">
+					<button type="button" id="50" class="btn">
+					50%</button>
 				</div>
 
-				<div class="tip-input">
-					<input type="radio" value="Custom" id="Custom" />
-					<label for="Custom">Custom</label>
+				<div class="custom-button">
+					<button type="button" class="btn">
+					Custom</button>
 				</div>
 			</fieldset>
 
