--- a/index.html
+++ b/index.html
@@ -48,33 +48,32 @@
 				<h2 class="section-title">Select Tip %</h2>
 			
 				<div class="tip-button">
-					<button type="button" id="5" class="btn" value="0.05">
+					<button type="button" id="five" class="btn" value="0.05">
 					5%</button>
 				</div>
 
 				<div class="tip-button">
-					<button type="button" id="10" class="btn">
+					<button type="button" id="ten" class="btn" value="0.1">
 					10%</button>
 				</div>
 
 				<div class="tip-button">
-					<button type="button" id="15" class="btn">
+					<button type="button" id="fifteen" class="btn" value="0.15">
 					15% </button>
 				</div>
 
 				<div class="tip-button">
-					<button type="button" id="25" class="btn">
+					<button type="button" id="twenty-five" class="btn" value="0.25">
 					25%</button>
 				</div>
 
 				<div class="tip-button">
-					<button type="button" id="50" class="btn">
+					<button type="button" id="fifty" class="btn" value="0.5">
 					50%</button>
 				</div>
 
 				<div class="custom-button">
-					<button type="button" class="btn">
-					Custom</button>
+					<input type="button" id="custom" class="btn" value="Custom">
 				</div>
 			</fieldset>
 
@@ -90,7 +89,6 @@
 				<div class="person">/ person</div>
 				<div class="total amount">$0.00</div>
 			</div>
-			<button class="calc">Calculate</button>
 			<input type="reset" value="Reset" />
 		</section>
 
