--- a/index.html
+++ b/index.html
@@ -42,55 +42,96 @@
 		</header>
 
 		<section class="section">
-			<h2 class="section-title">Bill</h2>
-			<input type="number" class="bill-amount input click" placeholder="0.00" name="bill"/>
+			<div class="title">
+				<h2 class="section-title">Bill</h2>
+				<div class="error error-bill"></div>
+			</div>
+			<input
+				type="number"
+				class="bill-amount input click"
+				placeholder="0.00"
+				name="bill"
+			/>
 
 			<fieldset>
 				<h2 class="section-title">Select Tip %</h2>
-			
-				<div class="tip-button">
-					<button type="button" id="five" class="btn click" value="0.05">
-					5%</button>
-				</div>
 
-				<div class="tip-button">
-					<button type="button" id="ten" class="btn click" value="0.1">
-					10%</button>
-				</div>
+				<div class="tip-form">
+					<div class="tip-button">
+						<button type="button" id="five" class="btn click" value="0.05">
+							5%
+						</button>
+					</div>
 
-				<div class="tip-button">
-					<button type="button" id="fifteen" class="btn click" value="0.15">
-					15% </button>
-				</div>
+					<div class="tip-button">
+						<button type="button" id="ten" class="btn click" value="0.1">
+							10%
+						</button>
+					</div>
 
-				<div class="tip-button">
-					<button type="button" id="twenty-five" class="btn click" value="0.25">
-					25%</button>
-				</div>
+					<div class="tip-button">
+						<button type="button" id="fifteen" class="btn click" value="0.15">
+							15%
+						</button>
+					</div>
 
-				<div class="tip-button">
-					<button type="button" id="fifty" class="btn click" value="0.5">
-					50%</button>
-				</div>
+					<div class="tip-button">
+						<button
+							type="button"
+							id="twenty-five"
+							class="btn click"
+							value="0.25"
+						>
+							25%
+						</button>
+					</div>
 
-				<div class="custom-button">
-					<input type="button" id="custom" class="custom input click" value="Custom">
+					<div class="tip-button">
+						<button type="button" id="fifty" class="btn click" value="0.5">
+							50%
+						</button>
+					</div>
+
+					<div class="custom-button">
+						<input
+							type="button"
+							id="custom"
+							class="custom input click"
+							value="Custom"
+						/>
+					</div>
 				</div>
 			</fieldset>
 
-			<h2 class="section-title">Number of People</h2>
-			<input type="number" class="people-amount input click" placeholder="0"/>
-			<div>
-				<div>Tip Amount</div>
-				<div class="person">/ person</div>
-				<div class="tip-amount amount">$0.00</div>
+
+			<div class="title">
+				<h2 class="section-title">Number of People</h2>
+				<div class="error error-people"></div>
 			</div>
-			<div>
-				Total
-				<div class="person">/ person</div>
-				<div class="total amount">$0.00</div>
+			<input type="number" class="people-amount input click" placeholder="0" />
+			<div class="result">
+				<div class="result-section">
+					<div class="left">
+						<div class="result-details">Tip Amount</div>
+						<div class="person">/ person</div>
+					</div>
+					<div class="tip-amount amount">$0.00</div>
+				</div>
+
+				<div class="result-section">
+					<div class="left">
+						<div class="result-details">Total</div>
+							<div class="person">/ person</div>
+					</div>
+							<div class="total amount">$0.00</div>
+						</div>
+
+						<input type="reset" value="RESET" class="click reset" />
+					</div>
+				</div>
+
+				
 			</div>
-			<input type="reset" value="Reset" class="click"/>
 		</section>
 
 		<div class="attribution">
