--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 				class="bill-amount input click"
 				placeholder="0.00"
 				name="bill"
+				min="0.01"
+				step="0.01"
 			/>
 
 			<fieldset>
