--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- displays site properly based on user's device -->
 
 		<link
 			rel="icon"
@@ -41,21 +40,24 @@
 			</h1>
 		</header>
 
-		<section class="section">
-			<div class="title">
-				<h2 class="section-title">Bill</h2>
-				<div class="error error-bill"></div>
+		<div class="section">
+			<div class="section-bill">
+				<div class="title">
+					<h2 class="section-title">Bill</h2>
+					<div class="error error-bill"></div>
+				</div>
+				<input
+					type="number"
+					class="bill-amount input click"
+					placeholder="0"
+					name="bill"
+					min="0.01"
+					step="0.01"
+				/>
 			</div>
-			<input
-				type="number"
-				class="bill-amount input click"
-				placeholder="0"
-				name="bill"
-				min="0.01"
-				step="0.01"
-			/>
 
 			<fieldset>
+				<div class="tip-section">
 				<h2 class="section-title">Select Tip %</h2>
 
 				<div class="tip-form">
@@ -103,21 +105,23 @@
 						/>
 					</div>
 				</div>
+				</div>
 			</fieldset>
 
-
-			<div class="title">
-				<h2 class="section-title">Number of People</h2>
-				<div class="error error-people"></div>
+			<div class="people-section">
+				<div class="title">
+					<h2 class="section-title">Number of People</h2>
+					<div class="error error-people"></div>
+				</div>
+				<input type="number" class="people-amount input click" placeholder="0" />
 			</div>
-			<input type="number" class="people-amount input click" placeholder="0" />
 			<div class="result">
 				<div class="result-section">
 					<div class="left">
 						<div class="result-details">Tip Amount</div>
 						<div class="person">/ person</div>
 					</div>
-					<div class="tip-amount amount">$0.00</div>
+					<div class="tip-amount amount">$0</div>
 				</div>
 
 				<div class="result-section">
@@ -125,12 +129,12 @@
 						<div class="result-details">Total</div>
 							<div class="person">/ person</div>
 					</div>
-							<div class="total amount">$0.00</div>
-						</div>
-
-						<input type="reset" value="RESET" class="click reset" />
-					</div>
+							<div class="total amount">$0</div>
 				</div>
+
+				<input type="reset" value="RESET" class="click reset" />
+				</div>
+			</div>
 
 				
 			</div>
