--- a/index.html
+++ b/index.html
@@ -119,22 +119,24 @@
 					</div>
 				</div>
 
-				
-				<div class="result">
-					<div class="result-section">
-						<div class="left">
-							<div class="result-details">Tip Amount</div>
-							<div class="person">/ person</div>
-						</div>
-						<div class="tip-amount amount">$0</div>
-					</div>
 
-					<div class="result-section">
-						<div class="left">
-							<div class="result-details">Total</div>
+				<div class="result-wrapper">
+					<div class="result">
+						<div class="result-section">
+							<div class="left">
+								<div class="result-details">Tip Amount</div>
 								<div class="person">/ person</div>
+							</div>
+							<div class="tip-amount amount">$0</div>
 						</div>
-								<div class="total amount">$0</div>
+
+						<div class="result-section">
+							<div class="left">
+								<div class="result-details">Total</div>
+									<div class="person">/ person</div>
+							</div>
+									<div class="total amount">$0</div>
+						</div>
 					</div>
 
 					<input type="reset" value="RESET" class="click reset" />
